feat: add Fixed class with constructors, member functions, and test files

--- a/cpp01/ex04/Makefile
+++ b/cpp01/ex04/Makefile
@@ -1,5 +1,5 @@
 CXX     = c++
-CXXFLAGS= -Wall -Wextra -Werror -std=c++17
+CXXFLAGS= -Wall -Wextra -Werror -std=c++17 -fsanitize=address
 
 NAME    = replace
 SRCS    = main.cpp
