finish till ex02 in cpp04

--- a/cpp04/ex00/Makefile
+++ b/cpp04/ex00/Makefile
@@ -11,7 +11,7 @@ all: $(NAME)
 $(NAME): $(OBJS)
 	$(CXX) $(CXXFLAGS) -o $@ $(OBJS)
 
-%.o: %.cpp # .hpp files
+%.o: %.cpp
 	$(CXX) $(CXXFLAGS) -c $<
 
 clean:
