--- a/cpp08/ex01/Makefile
+++ b/cpp08/ex01/Makefile
@@ -1,8 +1,8 @@
-NAME = main
+NAME = span
 CXX = c++
 CXXFLAGS = -Wall -Wextra -Werror -std=c++17
 
-SRCS = main.cpp
+SRCS = main.cpp Span.cpp
 OBJS = $(SRCS:.cpp=.o)
 
 all: $(NAME)
@@ -10,7 +10,7 @@ all: $(NAME)
 $(NAME): $(OBJS)
 	$(CXX) $(CXXFLAGS) -o $(NAME) $(OBJS)
 
-%.o: %.cpp Array.hpp
+%.o: %.cpp
 	$(CXX) $(CXXFLAGS) -c $<
 
 clean:
